:lipstick: Fix button tooltip wrap

--- a/styles/main.sass
+++ b/styles/main.sass
@@ -93,6 +93,7 @@
           z-index: 1
           left: -50%
           transition: opacity 1s
+          white-space: nowrap
 
     .text
       max-width: $max-width * 0.5
